--- a/training/Content/Site.css
+++ b/training/Content/Site.css
@@ -15,8 +15,20 @@
   src: url('../fonts/DroidKufi-Bold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/DroidKufi-Bold.ttf') format('truetype');
 }
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    src: url('../fonts/Roboto-Medium.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Kanit';
+    font-style: normal;
+    src: url('../fonts/Kanit-Regular.ttf') format('truetype');
+}
+
 body {
-    font-family:'Droid Arabic Kufi' !important;
+    font-family: 'Droid Arabic Kufi' !important;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Wrapping element */
