--- a/training/Site.Master
+++ b/training/Site.Master
@@ -18,6 +18,12 @@
         .float_left {
             float: left;
         }
+
+        #header {
+            background-image: url('../Images/header_fingerprints.png');
+            background-position: top center;
+            background-repeat: repeat-x;
+        }
     </style>
 
 
@@ -28,24 +34,10 @@
     <form id="form1" runat="server">
         <asp:ScriptManager ID="ScriptManager1" runat="server"></asp:ScriptManager>
 
-        <div id="header" style="height: 50px; background-color: rgba(0, 255, 120, 1); text-align: center; position: fixed; top:0; left:0; width:100%; z-index: 10;">
-            <h2 style="margin: 0px;">العنوان</h2>
-
-            <div style="width: 20%; height: 50px; float: left; position: absolute; left: 0px; top: 0px;">
-<%--                <asp:Button runat="server" CssClass="float_left" Text="AR" />--%>
-            </div>
-        </div>
-         
-        <br />
-        <br />
-
         <asp:ContentPlaceHolder ID="MainContent" runat="server">
         </asp:ContentPlaceHolder>
 
-<%--        <div id="footer" style="height: 50px; background-color: #b6ff00; position: fixed; bottom:0; left:0; width:100%;">
 
-        </div>--%>
-    
     </form>
 </body>
 </html>
